--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,10 @@
     }
   ],
   "require": {
-    "php": ">=5.6.4",
+    "php": ">=7.0.0",
     "smarty/smarty": "~3.1",
-    "oyejorge/less.php": "~1.7.0.9"
+    "oyejorge/less.php": "~1.7.0.9",
+    "leafo/scssphp": "^0.6.7"
   },
   "autoload": {
     "psr-4": {
