--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,9 @@
     }
   ],
   "require": {
-    "php": ">=7.0.0",
+    "php": ">=5.6.4",
     "smarty/smarty": "~3.1",
-    "oyejorge/less.php": "~1.7.0.9",
-    "leafo/scssphp": "^0.6.7"
+    "oyejorge/less.php": "~1.7.0.9"
   },
   "autoload": {
     "psr-4": {
