--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": [
     "framework"
   ],
-  "homepage": "http://ngsframework.com",
+  "homepage": "https://ngsframework.com",
   "license": "MIT",
   "authors": [
     {
@@ -14,7 +14,7 @@
     }
   ],
   "require": {
-    "php": ">=5.6.4",
+    "php": ">=7.1.0",
     "smarty/smarty": "~3.1",
     "oyejorge/less.php": "~1.7.0.9"
   },
