--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
   "require": {
     "php": ">=7.1.0",
     "smarty/smarty": "~3.1",
-    "oyejorge/less.php": "~1.7.0.9"
+    "oyejorge/less.php": "~1.7.0.9",
+    "scssphp/scssphp": "^1.0",
+    "melbahja/http2-pusher :": "~1"
   },
   "autoload": {
     "psr-4": {
