fixed composer.json issue

--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
     }
   ],
   "require": {
-    "php": ">=7.1.0",
+    "php": ">=7.2.0",
     "smarty/smarty": "~3.1",
     "oyejorge/less.php": "~1.7.0.9",
     "scssphp/scssphp": "^1.0",
-    "melbahja/http2-pusher :": "~1"
+    "melbahja/http2-pusher": "^1.0"
   },
   "autoload": {
     "psr-4": {
