--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,8 @@
   ],
   "require": {
     "php": ">=8.0",
-    "smarty/smarty": "~4",
-    "wikimedia/less.php": "~3",
-    "scssphp/scssphp": "^1",
+    "smarty/smarty": "~5",
+    "scssphp/scssphp": "^v1.12",
     "melbahja/http2-pusher": "^1.0"
   },
   "autoload": {
